--- a/premier.html
+++ b/premier.html
@@ -15,6 +15,7 @@
     <div id="main">
       <div id="nav">
         <h1>premier</h1>
+        <h6>model management</h6>
         <h2>Models</h2>
         <h2>Women/Man</h2>
         <h2>Agency/Blog/Information</h2>
@@ -29,12 +30,136 @@
               <h2>01</h2>
             </div>
             <div id="over2">
-                <h4>Explore</h4>
-                <img src="./arrow.png" >
+              <h4>Explore</h4>
+              <img src="./arrow.png" />
             </div>
           </div>
         </div>
       </div>
+
+      <div id="scroll">
+        <div id="container">
+          <img
+            src="https://plus.unsplash.com/premium_photo-1674069719655-7289402d71e9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cG90cmFpdCUyMG1vZGVsfGVufDB8fDB8fHww"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1609505848912-b7c3b8b4beda?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1634746715098-6cafbc6a7a00?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1683470223819-1f35862a8710?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTYwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1485462537746-965f33f7f6a7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDIwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1483985988355-763728e1935b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cG90cmFpdCUyMG1vZGVsJTIwZmFzaGlvbiUyMHNhcmVlfGVufDB8fDB8fHww"
+          />
+        </div>
+        <div id="container">
+          <img
+            src="https://plus.unsplash.com/premium_photo-1674069719655-7289402d71e9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cG90cmFpdCUyMG1vZGVsfGVufDB8fDB8fHww"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1609505848912-b7c3b8b4beda?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1634746715098-6cafbc6a7a00?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1683470223819-1f35862a8710?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTYwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1485462537746-965f33f7f6a7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDIwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D"
+          />
+          <img
+            src="https://images.unsplash.com/photo-1483985988355-763728e1935b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cG90cmFpdCUyMG1vZGVsJTIwZmFzaGlvbiUyMHNhcmVlfGVufDB8fDB8fHww"
+          />
+        </div>
+      </div>
+      <div id="alpha">
+        <h5>All</h5>
+        <h6>a</h6>
+        <h6>b</h6>
+        <h6>c</h6>
+        <h6>d</h6>
+        <h6>e</h6>
+        <h6>f</h6>
+        <h6>g</h6>
+        <h6>h</h6>
+        <h6>i</h6>
+        <h6>j</h6>
+        <h6>k</h6>
+        <h6>l</h6>
+        <h6>m</h6>
+        <h6>n</h6>
+        <h6>o</h6>
+        <h6>p</h6>
+        <h6>q</h6>
+        <h6>r</h6>
+        <h6>s</h6>
+        <h6>t</h6>
+        <h6>u</h6>
+        <h6>v</h6>
+        <h6>w</h6>
+        <h6>x</h6>
+        <h6>y</h6>
+        <h6>z</h6>
+      </div>
+      <div id="page2">
+        <div id="part1">
+          <h1>VOGUE / SHOT</h1>
+        </div>
+        <div id="part2">
+          <img
+            src="https://images.unsplash.com/photo-1582533552406-234434284c17?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjY0fHxwb3RyYWl0JTIwbW9kZWwlMjBmYXNoaW9ufGVufDB8fDB8fHww"
+          />
+          <div id="part2-txt1">
+            <div id="txt1">
+              <h3>
+                Hannah Motler featuresina fashion story by the lake for Vogue
+                new shot
+              </h3>
+            </div>
+            <div id="txt2">
+              <h5>
+                Such exposure to the fashion and beauty industries enabled her
+                passion for branding and creativity to transistion from one side
+                of camera to another
+              </h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="page3">
+        <div id="circle-txt">
+          <div id="circle-txt1">
+            <div id="inner">
+              <i class="ri-handbag-fill"></i>
+            </div>
+          
+          </div>
+          <div id="circle-txt2">
+            <h3>
+              Mansion SRTC : memories and cukture,te base of furistic fashion
+              awareness. Tilila Oulhaj look
+            </h3>
+          </div>
+        </div>
+        <div id="circle-img">
+          <img src="https://images.unsplash.com/photo-1524255684952-d7185b509571?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjQwfHxwb3RyYWl0JTIwbW9kZWwlMjBmYXNoaW9ufGVufDB8fDB8fHww">
+        </div>
+      </div>
+      <div id="page4">
+        <img src="https://images.unsplash.com/photo-1516575150278-77136aed6920?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHRyYWRpdGlvbmFsJTIwbW9kZWwlMjBzYXJlZXxlbnwwfDB8MHx8fDA%3D" alt="">
+        <div id="royal">
+          <h3>R</h3>
+        </div>
+        
+      </div>
+
     </div>
   </body>
 </html>
