--- a/premier.html
+++ b/premier.html
@@ -1,165 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Premier</title>
-    <link rel="stylesheet" href="Premier.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <div id="main">
-      <div id="nav">
-        <h1>premier</h1>
-        <h6>model management</h6>
-        <h2>Models</h2>
-        <h2>Women/Man</h2>
-        <h2>Agency/Blog/Information</h2>
-        <h2><i class="ri-search-line"></i></h2>
-      </div>
-      <div id="center">
-        <div id="content">
-          <video autoplay loop muted src="./video.mp4"></video>
-          <div id="overlay">
-            <div id="over1">
-              <h1>Photography<br />and films</h1>
-              <h2>01</h2>
-            </div>
-            <div id="over2">
-              <h4>Explore</h4>
-              <img src="./arrow.png" />
-            </div>
-          </div>
-        </div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Premier</title>
+  <link rel="stylesheet" href="Premier.css" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
+</head>
 
-      <div id="scroll">
-        <div id="container">
-          <img
-            src="https://plus.unsplash.com/premium_photo-1674069719655-7289402d71e9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cG90cmFpdCUyMG1vZGVsfGVufDB8fDB8fHww"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1609505848912-b7c3b8b4beda?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1634746715098-6cafbc6a7a00?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1683470223819-1f35862a8710?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTYwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1485462537746-965f33f7f6a7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDIwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1483985988355-763728e1935b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cG90cmFpdCUyMG1vZGVsJTIwZmFzaGlvbiUyMHNhcmVlfGVufDB8fDB8fHww"
-          />
-        </div>
-        <div id="container">
-          <img
-            src="https://plus.unsplash.com/premium_photo-1674069719655-7289402d71e9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cG90cmFpdCUyMG1vZGVsfGVufDB8fDB8fHww"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1609505848912-b7c3b8b4beda?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1634746715098-6cafbc6a7a00?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1683470223819-1f35862a8710?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTYwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1485462537746-965f33f7f6a7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDIwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1483985988355-763728e1935b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cG90cmFpdCUyMG1vZGVsJTIwZmFzaGlvbiUyMHNhcmVlfGVufDB8fDB8fHww"
-          />
-        </div>
-      </div>
-      <div id="alpha">
-        <h5>All</h5>
-        <h6>a</h6>
-        <h6>b</h6>
-        <h6>c</h6>
-        <h6>d</h6>
-        <h6>e</h6>
-        <h6>f</h6>
-        <h6>g</h6>
-        <h6>h</h6>
-        <h6>i</h6>
-        <h6>j</h6>
-        <h6>k</h6>
-        <h6>l</h6>
-        <h6>m</h6>
-        <h6>n</h6>
-        <h6>o</h6>
-        <h6>p</h6>
-        <h6>q</h6>
-        <h6>r</h6>
-        <h6>s</h6>
-        <h6>t</h6>
-        <h6>u</h6>
-        <h6>v</h6>
-        <h6>w</h6>
-        <h6>x</h6>
-        <h6>y</h6>
-        <h6>z</h6>
-      </div>
-      <div id="page2">
-        <div id="part1">
-          <h1>VOGUE / SHOT</h1>
-        </div>
-        <div id="part2">
-          <img
-            src="https://images.unsplash.com/photo-1582533552406-234434284c17?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjY0fHxwb3RyYWl0JTIwbW9kZWwlMjBmYXNoaW9ufGVufDB8fDB8fHww"
-          />
-          <div id="part2-txt1">
-            <div id="txt1">
-              <h3>
-                Hannah Motler featuresina fashion story by the lake for Vogue
-                new shot
-              </h3>
-            </div>
-            <div id="txt2">
-              <h5>
-                Such exposure to the fashion and beauty industries enabled her
-                passion for branding and creativity to transistion from one side
-                of camera to another
-              </h5>
-            </div>
+<body>
+  <div id="main">
+    <div id="nav">
+      <h1>premier</h1>
+      <h2>Models</h2>
+      <h2>Women/Man</h2>
+      <h2>Agency/Blog/Information</h2>
+      <h2><i class="ri-search-line"></i></h2>
+    </div>
+    <div id="center">
+      <div id="content">
+        <video autoplay loop muted src="./video.mp4"></video>
+        <div id="overlay">
+          <div id="over1">
+            <h1>Photography<br />and films</h1>
+            <h2>01</h2>
+          </div>
+          <div id="over2">
+            <h4>Explore</h4>
+            <img src="./arrow.png" />
           </div>
         </div>
       </div>
-      <div id="page3">
-        <div id="circle-txt">
-          <div id="circle-txt1">
-            <div id="inner">
-              <i class="ri-handbag-fill"></i>
-            </div>
-          
-          </div>
-          <div id="circle-txt2">
+    </div>
+
+    <div id="scroll">
+      <div id="container">
+        <img
+          src="https://plus.unsplash.com/premium_photo-1674069719655-7289402d71e9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cG90cmFpdCUyMG1vZGVsfGVufDB8fDB8fHww" />
+        <img
+          src="https://images.unsplash.com/photo-1609505848912-b7c3b8b4beda?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D" />
+        <img
+          src="https://images.unsplash.com/photo-1634746715098-6cafbc6a7a00?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D" />
+        <img
+          src="https://images.unsplash.com/photo-1683470223819-1f35862a8710?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTYwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D" />
+        <img
+          src="https://images.unsplash.com/photo-1485462537746-965f33f7f6a7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDIwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D" />
+        <img
+          src="https://images.unsplash.com/photo-1483985988355-763728e1935b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cG90cmFpdCUyMG1vZGVsJTIwZmFzaGlvbiUyMHNhcmVlfGVufDB8fDB8fHww" />
+      </div>
+      <div id="container">
+        <img
+          src="https://plus.unsplash.com/premium_photo-1674069719655-7289402d71e9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8cG90cmFpdCUyMG1vZGVsfGVufDB8fDB8fHww" />
+        <img
+          src="https://images.unsplash.com/photo-1609505848912-b7c3b8b4beda?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D" />
+        <img
+          src="https://images.unsplash.com/photo-1634746715098-6cafbc6a7a00?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTR8fHBvdHJhaXQlMjBtb2RlbHxlbnwwfHwwfHx8MA%3D%3D" />
+        <img
+          src="https://images.unsplash.com/photo-1683470223819-1f35862a8710?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTYwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D" />
+        <img
+          src="https://images.unsplash.com/photo-1485462537746-965f33f7f6a7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDIwfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D" />
+        <img
+          src="https://images.unsplash.com/photo-1483985988355-763728e1935b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cG90cmFpdCUyMG1vZGVsJTIwZmFzaGlvbiUyMHNhcmVlfGVufDB8fDB8fHww" />
+      </div>
+    </div>
+    <div id="alpha">
+      <h5>All</h5>
+      <h6>a</h6>
+      <h6>b</h6>
+      <h6>c</h6>
+      <h6>d</h6>
+      <h6>e</h6>
+      <h6>f</h6>
+      <h6>g</h6>
+      <h6>h</h6>
+      <h6>i</h6>
+      <h6>j</h6>
+      <h6>k</h6>
+      <h6>l</h6>
+      <h6>m</h6>
+      <h6>n</h6>
+      <h6>o</h6>
+      <h6>p</h6>
+      <h6>q</h6>
+      <h6>r</h6>
+      <h6>s</h6>
+      <h6>t</h6>
+      <h6>u</h6>
+      <h6>v</h6>
+      <h6>w</h6>
+      <h6>x</h6>
+      <h6>y</h6>
+      <h6>z</h6>
+    </div>
+    <div id="page2">
+      <div id="part1">
+        <h1>VOGUE / SHOT</h1>
+      </div>
+      <div id="part2">
+        <img
+          src="https://images.unsplash.com/photo-1582533552406-234434284c17?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjY0fHxwb3RyYWl0JTIwbW9kZWwlMjBmYXNoaW9ufGVufDB8fDB8fHww" />
+        <div id="part2-txt1">
+          <div id="txt1">
             <h3>
-              Mansion SRTC : memories and cukture,te base of furistic fashion
-              awareness. Tilila Oulhaj look
+              Hannah Motler featuresina fashion story by the lake for Vogue
+              new shot
             </h3>
           </div>
-        </div>
-        <div id="circle-img">
-          <img src="https://images.unsplash.com/photo-1524255684952-d7185b509571?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjQwfHxwb3RyYWl0JTIwbW9kZWwlMjBmYXNoaW9ufGVufDB8fDB8fHww">
+          <div id="txt2">
+            <h5>
+              Such exposure to the fashion and beauty industries enabled her
+              passion for branding and creativity to transistion from one side
+              of camera to another
+            </h5>
+          </div>
         </div>
       </div>
-      <div id="page4">
-        <img src="https://images.unsplash.com/photo-1516575150278-77136aed6920?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHRyYWRpdGlvbmFsJTIwbW9kZWwlMjBzYXJlZXxlbnwwfDB8MHx8fDA%3D" alt="">
-        <div id="royal">
-          <h3>R</h3>
+    </div>
+    <div id="page3">
+      <div id="circle-txt">
+        <div id="circle-txt1">
+          <img src="https://images.unsplash.com/photo-1554412933-514a83d2f3c8?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzl8fHRyZW5kJTIwbW9kZWwlMjBmYXNoaW9uJTIwcG90cmFpdHxlbnwwfHwwfHx8MA%3D%3D" alt="">
         </div>
-        
+        <div id="circle-txt2">
+          <h3>
+            Mansion SRTC : memories and cukture,te base of furistic fashion
+            awareness. Tilila Oulhaj look
+          </h3>
+        </div>
+      </div>
+      <div id="circle-img">
+        <img
+          src="https://images.unsplash.com/photo-1524255684952-d7185b509571?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjQwfHxwb3RyYWl0JTIwbW9kZWwlMjBmYXNoaW9ufGVufDB8fDB8fHww">
+      </div>
+    </div>
+    <div id="page4">
+      <img
+        src="https://images.unsplash.com/photo-1516575150278-77136aed6920?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHRyYWRpdGlvbmFsJTIwbW9kZWwlMjBzYXJlZXxlbnwwfDB8MHx8fDA%3D"
+        alt="">
+      <div id="royal">
+        <h3>R</h3>
       </div>
 
     </div>
-  </body>
+    <div id="page5">
+      <h1>Updates</h1>
+      <div class="elem">
+        <img
+          src="https://images.unsplash.com/photo-1534030347209-467a5b0ad3e6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cG90cmFpdCUyMG1vZGVsJTIwbWVufGVufDB8fDB8fHww"
+          alt="">
+        <h4>Mens Fashion</h4>
+        <div class="elem-part2">
+          <h1>Khadim & Tom Ford</h1>
+          <h5>5th November 2025</h5>
+        </div>
+      </div>
+      <div class="elem">
+        <img
+          src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODN8fHBvdHJhaXQlMjBtb2RlbCUyMG1lbnxlbnwwfHwwfHx8MA%3D%3D"
+          alt="">
+        <h4>womens Fashion</h4>
+        <div class="elem-part2">
+          <h1>Arena Homme</h1>
+          <h5>18th May 2025</h5>
+        </div>
+      </div>
+      <div class="elem">
+        <img
+          src="https://images.unsplash.com/photo-1677334915483-f075dd225ea4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTgzfHxwb3RyYWl0JTIwbW9kZWx8ZW58MHx8MHx8fDA%3D"
+          alt="">
+        <h4>Special offer</h4>
+        <div class="elem-part2">
+          <h1>Jing for Wonderland</h1>
+          <h5>25th March 2025</h5>
+        </div>
+      </div>
+      <div class="elem">
+        <img
+          src="https://plus.unsplash.com/premium_photo-1727942421317-382428c9ac44?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDl8fHBvdHJhaXQlMjBtb2RlbCUyMG1lbnxlbnwwfHwwfHx8MA%3D%3D"
+          alt="">
+        <h4>Models Talk</h4>
+        <div class="elem-part2">
+          <h1>Glass x Belle</h1>
+          <h5>10th September 2025</h5>
+        </div>
+      </div>
+    </div>
+    <div id="page6">
+      <div id="page6-lft">
+        <img
+          src="https://plus.unsplash.com/premium_photo-1715876234699-a875e59b3ebe?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHBvdHJhaXQlMjBtb2RlbCUyMGZhc2hpb258ZW58MHx8MHx8fDA%3D"
+          alt="">
+      </div>
+      <div id="page6-ryt">
+        <div id="page6-ryt-cnt">
+          <h1>Movie shot</h1>
+          <h3>London based Tom Mitchell has a distinct aesthetic within his photogrpahy & moving image</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum laborum nobis pariatur vel, molestiae
+            magnam? Consequuntur repudiandae mollitia maiores expedita.</p>
+        </div>
+        <div id="page6-ryt-img">
+          <div id="ryt-img1"></div>
+          <div id="ryt-img2"></div>
+        </div>
+      </div>
+    </div>
+    <div id="marque">
+      <h1>premier models 2024</h1>
+      <h1>premier models 2024</h1>
+      <h1>premier models 2024</h1>
+      <h1>premier models 2024</h1>
+      <h1>premier models 2024</h1>
+    </div>
+    <div id="footer">
+      <h1>premier</h1>
+      <h2>Models</h2>
+      <h2>Women/Man</h2>
+      <h2>Agency/Blog/Information</h2>
+      <div id="foot-down">
+        <div id="foot-icons">
+          <i class="ri-instagram-line"></i>
+          <i class="ri-twitter-fill"></i>
+          <i class="ri-facebook-box-fill"></i>
+          <i class="ri-youtube-fill"></i>
+          <i class="ri-linkedin-fill"></i>
+        </div>
+        <h4>© All Content Copytight</h4>
+      </div>
+    </div>
+  </div>
+
+  </div>
+</body>
+
 </html>
